--- a/xinfra/aws-eks/simple-web-deploy.yml
+++ b/xinfra/aws-eks/simple-web-deploy.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: simple-web
-          image: <your-dockerhub-id>/simple-web
+          image: taeho0206/simple-web
           ports:
             - containerPort: 80
