--- a/.github/workflows/eks-deploy-very-smart.yml
+++ b/.github/workflows/eks-deploy-very-smart.yml
@@ -15,7 +15,7 @@ jobs:
 
     runs-on: ubuntu-latest
     env:
-      DOCKER_IMAGE: ${{ secrets.taeho0206 }}/simple-web
+      DOCKER_IMAGE: ${{ secrets.DOCKER_USERNAME }}/simple-web
       DOCKER_TAG: ${{ github.run_number }}
 
     steps:
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 7.Docker Image Build
-        run: docker build  -t ${{ secrets.taeho0206 }}/simple-web:${{ env.DOCKER_TAG }} .
+        run: docker build  -t ${{ secrets.DOCKER_USERNAME }}/simple-web:${{ env.DOCKER_TAG }} .
 
       - name: 8.Docker Login
         uses: docker/login-action@v3.0.0
