--- a/.github/workflows/eks-deploy-very-smart.yml
+++ b/.github/workflows/eks-deploy-very-smart.yml
@@ -28,7 +28,7 @@ jobs:
       - name: 8.Docker Login
         uses: docker/login-action@v3.0.0
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: ${{ secrets.DOCKERkubectl patch svc argocd-server -n argocd -p '{"spec": {"type": "LoadBalancer"}}'_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
           logout: true
 
@@ -52,7 +52,7 @@ jobs:
           ls -la
           # 현재 파일 내용 확인
           cat simple-deploy.yaml
-          sed -i "s|image: ${{ secrets.DOCKER_USERNAME }}\/simple-web.*|image: ${{ secrets.DOCKER_USERNAME }}\/simple-web:${{ env.DOCKER_TAG }}|g" simple-deploy.yaml
+          sed -i "s|image: ${{ secrets.DOCKER_USERNAME }}\/simple-web.*|image: ${{ secrets.DOCKER_USERNAME }}\/simple-web:${{ env.DOCKER_TAG }}|g" simple-deploy.yml
           # 변경된 내용 확인
           cat simple-deploy.yaml
 
@@ -62,6 +62,6 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git commit -am "Update image tag to ${{ env.DOCKER_TAG }}"
-          git remote set-url origin https://${{ secrets.PAT }}@github.com/${{ secrets.DOCKER_USERNAME }}/simple-service.git
+          git remote set-url origin https://${{ secrets.PAT }}@github.com/${{ secrets.DOCKER_USERNAME }}/simple-web-platform.git
 
           git push origin main
